# hermes-agent-ultra

./: .gitignore  Cargo.toml  README.md
.ci/: clippy-allowlist.txt
.github/workflows/: ci.yml  parity-audit.yml  rust.yml
crates/hermes-acp/: Cargo.toml
crates/hermes-acp/src/: handler.rs  session.rs
crates/hermes-agent/src/: agent_loop.rs  api_bridge.rs  compression.rs  context.rs  context_references.rs  credential_pool.rs  lib.rs  lsp_context.rs  memory_manager.rs  plugins.rs  provider.rs  providers_extra.rs  (+6 more)
crates/hermes-cli/: Cargo.toml
crates/hermes-mcp/: Cargo.toml
desktop/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
desktop/src/: main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: events.rs  lib.rs  state.rs
desktop/src-tauri/src/commands/: agent.rs  app.rs  files.rs  mod.rs  session.rs  workspaces.rs
desktop/src-tauri/src/services/: agent_service.rs  app_service.rs  mod.rs  session_service.rs  workspace_service.rs
docs/: upstream-sync.md
docs/implementation/: openhuman-p0-p1-runbook.md  openhuman-p0-p1-surface-matrix.md  openhuman-p2a-p2b-runbook.md  openhuman-p2a-p2b-surface-matrix.md  surfaces-1-16-2026-05-12.md
docs/parity/: README.md  adapter-feature-matrix.json  adapter-feature-matrix.md  batch-triage-log.md  divergence-validation.json  global-parity-proof.json  global-parity-proof.md  intentional-divergence.json  parity-matrix.json  parity-matrix.md  queue-overrides.json  shared-different-classification.json  test-intent-mapping.json  test-intent-mapping.md  tranche-items-1-36-2026-05-09.md  upstream-missing-queue.json  upstream-missing-queue.md  workstream-status.json  workstream-status.md
docs/roadmaps/: DESKTOP_APP_FRAMEWORK_ADR_2026-05-28.en.md  DESKTOP_APP_FRAMEWORK_ADR_2026-05-28.md  INTELLIGENCE_SURFACE_12_IMPLEMENTATION_2026-05-08.md
scripts/: generate-upstream-patch-queue.py  run-differential-parity-gate.py  run-elite-sync-gate.py  run-golden-parity-harness.py  run-nightly-elite-gate.sh  run-openhuman-p0-p1-gate.sh  run-performance-autopilot.py  run-security-release-gate-v2.py  run-upstream-surface-coverage-gate.py
tests/: test_upstream_surface_coverage_gate.py
(+759 files in other folders)
